Wed Oct 26 17:09:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_intern): use prefixed version macro
	  RUBY_CONST_ID_CACHE.

Wed Oct 26 11:28:25 2016  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* NEWS: added several entries which (if I remember correctly) are
	  added in a year.

Tue Oct 25 12:54:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew_internal): follow the original class, not to loop
	  the prepended module.  [ruby-core:77591] [Bug #12832]

Mon Oct 24 10:52:17 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/lib/test/unit.rb (Test::Unit::Parallel#deal): update the
	  job status after a task finished, to show idling workers.

Mon Oct 24 10:51:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (Init_Complex): undefine methods inherited from
	  Comparable, because Complex does not have <=> method.
	  [Bug #12866]

	* class.c (rb_undef_methods_from): undefine methods defined in
	  super from klass.

Mon Oct 24 10:19:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (Init_Complex): undefine Complex#clamp, which does not
	  work like other Comparable methods, because Complex does not
	  have <=> method.  patched by Tim Peters <zomg.tim AT gmail.com>
	  in [ruby-core:77720].  [Bug #12866]

Sun Oct 23 11:41:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/encoding.h: include "ruby/ruby.h" explicitly for
	  enum ruby_fl_type and VALUE.

Sat Oct 22 23:33:55 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (reg_compile_gen): always append error message to the
	  error buffer.

Sat Oct 22 22:33:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (num_funcall1): check recursion by inverse pair, to
	  fix fake infinite recursion.  [ruby-core:77713] [Bug #12864]

Sat Oct 22 18:52:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_compact_bang): should return nil if no elements
	  is deleted.  [ruby-core:77709] [Bug #12863]
