@@ -1,3 +1,8 @@
+Thu Oct 27 09:12:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* object.c (rb_convert_to_integer): should not drop the converted
+	  string.
+
 Wed Oct 26 17:09:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/ruby.h (rb_intern): use prefixed version macro
